@@ -1,0 +1,23 @@
+#!/bin/sh
+# $Id$
+# elvis: comlaw	-- Search Australian Law using Comlaw (www.comlaw.gov.au)
+. surfraw || exit 1
+
+w3_usage_hook () {
+    cat <<EOF
+Usage: $w3_argv0 [options] [search words]...
+Description:
+  Surfraw search Australian Law using Comlaw (www.comlaw.gov.au)
+EOF
+    w3_global_usage
+}
+
+w3_config
+w3_parse_args "$@"
+# w3_args now contains a list of arguments
+if test -z "$w3_args"; then
+    w3_browse_url "http://www.comlaw.gov.au/"
+else
+    escaped_args=`w3_url_of_arg $w3_args`
+    w3_browse_url "http://agsearch.ag.gov.au/clsearch/home?query=${escaped_args}"
+fi
